--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,8 @@
 backend:
-  name: git-gateway
+  name: github
+  repo: "zeyad-sukkary/Z-A-S"
   branch: main
+  auth_endpoint: https://decap-cms-auth.onrender.com/auth
 
 media_folder: "pics"
 public_folder: "/Z-A-S/pics"
