--- a/admin/config.yml
+++ b/admin/config.yml
@@ -4,6 +4,9 @@ backend:
   branch: main
   auth_endpoint: https://decap-cms-auth.onrender.com/auth
 
+site_url: https://zeyad-sukkary.github.io/Z-A-S
+base_url: /Z-A-S
+
 media_folder: "pics"
 public_folder: "/Z-A-S/pics"
 
