--- a/admin/config.yml
+++ b/admin/config.yml
@@ -3,7 +3,8 @@ backend:
   repo: "zeyad-sukkary/Z-A-S"
   branch: main
   auth_endpoint: https://decap-cms-auth.onrender.com/auth
-
+  auth_type: implicit
+ 
 site_url: https://zeyad-sukkary.github.io/Z-A-S
 base_url: /Z-A-S
 
