--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,5 +1,5 @@
 backend:
-  name: github
+  name: proxy
   repo: "zeyad-sukkary/Z-A-S"
   branch: main
   auth_endpoint: https://decap-cms-auth.onrender.com/auth
