--- a/.pages.yml
+++ b/.pages.yml
@@ -5,7 +5,7 @@
     {
       "name": "articles",
       "label": "Articles",
-      "folder": "articles",
+      "folder": "/articles",
       "extension": "json",
       "format": "json",
       "identifier_field": "slug",
