--- a/.pages.yml
+++ b/.pages.yml
@@ -14,7 +14,7 @@ content:
   - name: articles
     label: Articles
     type: collection
-    path: src/_articles
+    path: articles
     fields:
       - name: title
         label: Title
