Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -16,6 +16,7 @@ content:
     type: collection
     path: articles
     format: json
+    extension: json
     fields:
       - name: title
         label: Title
