--- a/.pages.yml
+++ b/.pages.yml
@@ -38,7 +38,7 @@ content:
           extensions: [jpg, jpeg, png]
       - name: categories
         label: Categories
-        type: string
+        type: array
       - name: authors
         label: Authors
         type: string
