Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -2,7 +2,7 @@ media:
   - name: default
     label: Media
     input: pics
-    output: /pics
+    output: pics
     path: pics
     extensions:
       - jpg
